argocd/base/resources/network-policies/argocd/allow-internal.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-internal-communication
  namespace: argocd
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    # Allow all ArgoCD components to communicate with each other
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: argocd
