argocd/base/resources/network-policies/argocd/allow-prometheus-scrape.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-scrape
  namespace: argocd
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 8082  # argocd-metrics
        - protocol: TCP
          port: 8083  # argocd-server-metrics
        - protocol: TCP
          port: 8084  # argocd-repo-server-metrics
